--- a/main.css
+++ b/main.css
@@ -20,7 +20,7 @@
 .places{font-family:Inter,Arial,sans-serif;padding:15px 0 36px}@media screen and (max-width:568px){.places{padding:15px 0 18px}}
 .card__description{align-items:center;background:#fff;display:flex;justify-content:space-between;padding:25px 20px}
 .card__image{background-size:cover;min-height:282px}.card__image:hover{cursor:pointer}
-.card__like-button{background:transparent url(images/like-inactive.49570bcb1d637fdb38e5.svg) no-repeat;background-size:21px 18px;border:none;cursor:pointer;height:18px;margin:0;padding:0;transition:.3s;width:21px}.card__like-button:hover{opacity:.6}
+.card__like-button{background:transparent url(images/like-inactive.49570bcb1d637fdb38e5.svg) no-repeat;background-size:21px 18px;border:none;cursor:pointer;height:18px;margin:0;padding:0;transition:.3s;width:21px}.card__like-button:hover{opacity:.6}.card__like-wrapper{align-items:center;display:flex;flex-direction:column;gap:3px}
 .card__like-button_is-active{background:transparent url(images/like-active.75438e944a43e4c0b404.svg) no-repeat}
 .card__delete-button{background:transparent url(images/delete-icon.a274c87c0f6b553b47ad.svg) 50% no-repeat;background-size:18px 18px;border:none;cursor:pointer;height:18px;margin:0;padding:0;position:absolute;right:15px;top:18px;transition:.3s;width:18px}.card__delete-button:hover{opacity:.6}
 .card__title{font-size:24px;line-height:29px;margin:0;max-width:220px;overflow:hidden;text-overflow:ellipsis;white-space:nowrap}
